@@ -24,5 +24,21 @@
     <string name="updateturnlist_iconList">Icon List (comma-separated, one for each turn)</string>
     <string name="updateturnlist_defaultIconList">turn_left.png,turn_right.png,turn_forward.png</string>
     <string name="addcommand_iconFilename">action.png</string>
+    <string name="performinteraction_initialText">Initial Text</string>
+    <string name="performinteraction_initialTextDefault">Pick number:</string>
+    <string name="performinteraction_initialPrompt">Initial Prompt (comma-separated)</string>
+    <string name="performinteraction_initialPromptDefault">Pick a command</string>
+    <string name="performinteraction_interactionMode">Interaction Mode</string>
+    <string name="performinteraction_interactionChoiceSetID">Interaction Choise Set ID</string>
+    <string name="performinteraction_helpPrompt">Help prompt (comma-separated)</string>
+    <string name="performinteraction_helpPromptDefault">help me,I\'m melting</string>
+    <string name="performinteraction_timeoutPrompt">Timeout prompt (comma-separated)</string>
+    <string name="performinteraction_timeoutPromptDefault">hurry it up</string>
+    <string name="performinteraction_vrHelp">VR Help Item #</string>
+    <string name="performinteraction_vrHelpItemPosDefault">1</string>
+    <string name="performinteraction_vrHelpItemDefault">VR help item</string>
+    <string name="performinteraction_vrHelpItemImageDefault">imageFilename</string>
+    <string name="performinteraction_timeout">Timeout</string>
+    <string name="performinteraction_timeoutDefault">10000</string>
     
 </resources>
