@@ -1,3 +1,6 @@
+[CW14]
++ Add GUI for PerformInteraction message.
+
 [CW12]
 * UpdateTurnList dialog: change the way how Turn items are parsed from the GUI.
 + Add an option to disable screen locking while doing XML tests. It can be toggled in the options menu, "Lock screen while testing" item. The change will NOT affect currently running tests, if any.
